only:left:completed:and:underline:remove

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="app.js" defer></script>
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/resp.css">
-    <link rel="icon" href="/assets/todo.png">
+    <link rel="icon" href="/assets/CheckedSign.svg">
     <script src="https://kit.fontawesome.com/afb69e72c1.js" crossorigin="anonymous"></script>
     <title>Todo App</title>
 </head>
@@ -17,13 +17,13 @@
                 <img class="Sun" src="/assets/Sun.svg">
             </header>
         <div>
-    <input type="text" id="inputBox" class="inputText" placeholder="Create a new todo…">
+    <input type="text" id="inputBox" class="inputText" maxlength="35" placeholder="Create a new todo…">
         </div>
             <div class="ListBackgroun">
                 <ul id="list">
-                    <li class="checked">Follow me on my Github</li>
+                     <li class="checked">Follow me on my Github</li>
                         <div class="underline"></div>
-                            <li >Connect me on Linkedin</li>
+                            <li>Connect me on Linkedin</li>
                         <div class="underline"></div>
                     <li>Start Coding</li>
                 <div class="underline"></div> 
