Clear:completed:function:added

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </ul>
         </div>
     <div class="underTxt">
-        <h1 id="Itemsleft" class="UTh1">Items left</h1>
+        <h1 id="Itemsleft" class="UTh1">1 Items left</h1>
             <span id="ClearComplited" class="UTh1">Clear Completed</span>
                 </div>
                     <div class="lastBox">
